--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,24 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!-- GLSurfaceView для рендеринга 3D-модели -->
     <android.opengl.GLSurfaceView
         android:id="@+id/gl_surface_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="visible"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/load_model_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Кнопка для загрузки модели -->
     <Button
         android:id="@+id/load_model_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/load_model"
+        android:text="Load Model"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.822"
+        app:layout_constraintHorizontal_bias="0.871"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/gl_surface_view" />
 
@@ -31,7 +32,7 @@
         android:id="@+id/unload_model_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/unload_model"
+        android:text="Unload Model"
         app:layout_constraintTop_toBottomOf="@id/gl_surface_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
